Fixed Alignment issue with button

--- a/mod_3_assignment/css/styles.css
+++ b/mod_3_assignment/css/styles.css
@@ -17,7 +17,6 @@ nav .container ul {
 .navbar-header .navbar-brand {
     font-size: 2em;
     color: #000;
-    margin: 10px;
 }
 
 #drop, .icon-bar {
